# CustomPlatControl

./: CMakeLists.txt  README.md  about.md  changelog.md  mod.json
.github/workflows/: multi-platform.yml
include/: CompilerCompat.hpp  CustomPlatControl.hpp
src/: InputManager.cpp  PlatformerHook.cpp  SettingsLayer.cpp  main.cpp
